<?xml version="1.0"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textColor="@color/black"
    tools:context="com.example.studygroup.Search_Course" >

    <TextView
        android:id="@+id/search_course_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/title_activity_search__course"
        android:textAllCaps="true"
        android:textColor="@color/maroon"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_course_title"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/search_dis"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/course_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_course_title"
        android:layout_marginLeft="110dip"
        android:layout_marginTop="150dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:hint="@string/course_code"
        android:maxLength="3"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_course_title"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="150dp"
        android:layout_toRightOf="@+id/course_code"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:hint="@string/course_name"
        android:maxLength="4"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Search_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_name"
        android:layout_marginLeft="120dip"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:hint="@string/search_btn"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>